# langchain-mlx-whisper-parser

./: README.md  langchain_mlx_whisper_parser.py  mlx_whisper_parser.py  pyproject.toml
